src/test/ui/associated-consts/assoc-const-eq-missing.stderr
error[E0220]: associated type `Z` not found for `Foo`
  --> $DIR/assoc-const-eq-missing.rs:15:16
   |
LL | fn foo1<F: Foo<Z=3>>() {}
   |                ^ associated type `Z` not found

error[E0220]: associated type `Z` not found for `Foo`
  --> $DIR/assoc-const-eq-missing.rs:17:16
   |
LL | fn foo2<F: Foo<Z=usize>>() {}
   |                ^ associated type `Z` not found

error[E0220]: associated type `Z` not found for `Foo`
  --> $DIR/assoc-const-eq-missing.rs:19:16
   |
LL | fn foo3<F: Foo<Z=5>>() {}
   |                ^ associated type `Z` not found

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0220`.
